syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_command;


message DsCommandBean{

     int32 id= 1;
     optional int32 command_DsCommandBean= 2;
     int64 process_definition_code= 3;
     optional string command_param= 4;
     optional int32 task_depend_DsCommandBean= 5;
     optional int32 failure_strategy= 6;
     optional int32 warning_DsCommandBean= 7;
     optional int32 warning_group_id=8;
     optional string schedule_time=9;
     optional string start_time= 10;
     optional int32 executor_id= 11;
     optional string update_time= 12;
     optional int32 process_instance_priority= 13;
     optional string worker_group= 14;
     optional int64 environment_code= 15;
     optional int32 dry_run= 16;
     optional int32 process_instance_id= 17;
     optional int32 process_definition_version= 18;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsCommandBeanService {
  rpc ListDsCommandBeans(ListDsCommandBeansRequest) returns (ListDsCommandBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsCommandBeans"
    };
  }

  rpc GetDsCommandBean(GetDsCommandBeanRequest) returns (DsCommandBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsCommandBeans/*}"
    };
  }

  rpc CreateDsCommandBean(CreateDsCommandBeanRequest) returns (DsCommandBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsCommandBeans"
      body: "DsCommandBean"
    };
  }

  rpc UpdateDsCommandBean(UpdateDsCommandBeanRequest) returns (DsCommandBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsCommandBean.name=DsCommandBeans/*}"
      body: "DsCommandBean"
    };
  }

  rpc DeleteDsCommandBean(DeleteDsCommandBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsCommandBeans/*}"
    };
  }
}

// message DsCommandBean {
// ! This should be defined elsewhere
// }

message ListDsCommandBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsCommandBeansResponse {
  // The field name should match the noun "DsCommandBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsCommandBean DsCommandBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsCommandBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsCommandBeanRequest {
  // The parent resource name where the DsCommandBean is to be created.
  string parent = 1;

  // The DsCommandBean id to use for this DsCommandBean.
  string DsCommandBean_id = 2;

  // The DsCommandBean resource to create.
  // The field name should match the Noun in the method name.
  DsCommandBean DsCommandBean = 3;
}

message UpdateDsCommandBeanRequest {
  // The DsCommandBean resource which replaces the resource on the server.
  DsCommandBean DsCommandBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsCommandBeanRequest {
  // The resource name of the DsCommandBean to be deleted.
  string name = 1;
}
